[package]
authors = ["Hzqi <Hzqi_110@hotmail.com>"]
edition = "2018"
name = "fragments"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-graphql-resolver = {path = "../../rust-graphql-resolver"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
